added button to go from cauldron to tools and tools to cauldron

--- a/saves/save_one/current_knowledge.json
+++ b/saves/save_one/current_knowledge.json
@@ -145,9 +145,9 @@
             "type": false
         },
         "fermentation": {
-            "name": false,
-            "img": false,
-            "type": false
+            "name": true,
+            "img": true,
+            "type": true
         }
     },
     "base": {
